--- a/src/templates/k2.html
+++ b/src/templates/k2.html
@@ -5,13 +5,21 @@
   <title>K2</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <style>
+    body {
+      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
+      font-size: 14pt;
+    }
+    td { font-size: 14pt; }
+    .question-text { font-size: 14pt; text-align: center; }
+  </style>
 </head>
 <body>
   <br><br>
   <div id="k2" style="text-align:center;">
     <div class="passQ">
       <p>
-        Now, we would like to know how much you learned from the formal task. Please tell us about what you have learned today about Health. You can recall anything you remember from any of the topics you read today. You don't need to remember the information word for word. Please say as much as you can!
+        Now, we would like to know how much you learned from the formal task. Please tell us about what you have learned about Health today. You can recall anything you remember from any of the topics you read today. You don't need to remember the information word for word. Please say as much as you can!
       </p>
       <br>
       <p style="font-size:18pt;">
