--- a/src/templates/practice/prac_instruction.html
+++ b/src/templates/practice/prac_instruction.html
@@ -13,6 +13,7 @@
       font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
       max-width: 100%;
       overflow-x: hidden;
+      font-size: 14pt;
     }
     
     .cl2 {
@@ -56,26 +57,39 @@
 <body>
   <div class='cl2'>
     <h2><b>Practice Instructions</b></h2>
-    <p style='line-height:130%'>
-      First, you will learn how to do the task in this practice. Your task is to learn about animals. There are articles about three animal-related topics. The goal is to learn as much about animals as possible instead of memorizing the articles word for word. You will have 4 minutes to learn before answering some questions. It is very important for you to pay attention to the articles and do your best to learn from them.  Some animal topics are more difficult than others. You will need to do your best to optimize your learning outcome as a whole within the time limit.
+    <p>
+      First, you will learn how to do the task through a short practice. Your task is to learn about animals. There are articles about three animal-related topics. The goal is to learn as much as you can about animals instead of memorizing the articles word for word. You will have <strong>4 minutes</strong> to read and learn before answering some questions. It is very important for you to pay attention to the articles and do your best to learn from them. Some animal topics are more difficult than others, so please try to manage your time effectively to optimize your learning within the time limit.
     </p>
-    <p style='line-height:130%'>
-      During the 4 minutes, you will select one animal topic at a time and read a collection of articles about it. You will see one article at a time, and you can read at your own pace. After you read each article, you have a <b>choice</b>. You can either continue reading about this animal topic by pressing the <b>“Read the Next Article”</b> OR you can switch to a new topic by pressing <b>“Go to Other Topics”</b>. You only have 4 minutes to learn about animals, so <b>do your best to concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are either too hard or not helping you to learn anything, you might want to decide to switch to a new topic. This is your choice.
+
+    <p>
+      During the <strong>4 minutes</strong>, you will select <em>one animal topic at a time</em> and read a collection of articles about it. You will see one article at a time and can read at your own pace.
     </p>
-    <p style='line-height:130%'>
-      Note that there are more articles than you can read fully within 4 minutes so you should make your decisions about whether to continue or stop reading carefully so that you can learn as much information as possible about animals.
+
+    <p>After reading each article, you will have a choice:</p>
+    <ul>
+      <li>To continue reading about the same animal topic, click <b>“Read the Next Article.”</b></li>
+      <li>To switch to a new topic, click <b>“Go to Other Topics.”</b></li>
+    </ul>
+
+    <p>
+      You will have <strong>4 minutes</strong> total to learn about animals, so <b>do your best to concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles for the topic seem too difficult or not helping you learn, you might want to choose to switch to another topic. The choice is yours.
     </p>
-    <p style='line-height:130%'>
-      After reading each article, you will be asked to rate how easy the article was, how much new information you thought was in the article, how much you learned from this article, AND how much you learned from all the articles you read so far today. You will be asked to make these ratings on a scale from 0 to 100 by moving the circle:
+
+    <p>
+      Note that there are more articles than you can read fully within 4 minutes, so choose carefully when to continue or switch topics so that you can learn as much information as possible about animals.
     </p>
+
+    <p>
+      After reading each article, you will be asked to rate how easy the article was, how much new information you thought was in the article, how much you learned from the article, AND how much you learned from all the articles you read so far today. You will be asked to make these ratings on a scale from 0 to 100 by moving the circle:
+    </p>
+
+    
     <div>
     <table>
-
-
     <!-- quesation 1-->
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b>1. How easy was this article to read?</b>
+      <b>1. Compared to the other articles that you have read today, how much new information was in this article?</b>
       </td>
     </tr>
     <tr>
@@ -92,8 +106,8 @@
              </tr>
              <!-- 分数解释-->
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'>Very Difficult</td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'>Very Easy</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'>No New Information</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'>Completely New Information</td>
              </tr>
            </table>
         </form>
@@ -104,7 +118,7 @@
     <!-- question 2--> 
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b><br>2. Including the other articles that you have read today, how much new information was in this article?</b>
+      <b><br>2. How easy was this article to read?</b>
       </td>
     </tr>
     <tr>
@@ -115,12 +129,12 @@
                <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
              </tr>
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'><b>0</b></td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'><b>100</b></td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'><b>0</b></td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'><b>100</b></td>
              </tr>
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'>No New Information</td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'>Completely New Information</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'>Very Difficult</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'>Very Easy</td>
              </tr>
            </table>
         </form>
@@ -130,7 +144,7 @@
     <!-- question 3-->
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b><br>3. How much did you learn from this particular article?</b>
+      <b><br>3. How much did you learn from this article?</b>
       </td>
     </tr>
     <tr>
@@ -141,12 +155,12 @@
                <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
             </tr>
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'><b>0</b></td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'><b>100</b></td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'><b>0</b></td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'><b>100</b></td>
              </tr>
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
              </tr>
            </table>
         </form>
@@ -156,7 +170,7 @@
     <!-- question 4-->
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b><br>4. How much did you learn overall from the articles?</b>
+      <b><br>4. How much did you learn overall from the articles you have read so far today (including this article)?</b>
       </td>
     </tr>
     <tr>
@@ -167,12 +181,12 @@
                <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
             </tr>
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'><b>0</b></td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'><b>100</b></td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'><b>0</b></td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'><b>100</b></td>
              </tr>
              <tr>
-               <td style='font-size:13pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
-               <td style='font-size:13pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
+              <td style='font-size:14pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
              </tr>
            </table>
         </form>
@@ -183,13 +197,13 @@
     </div>
 
     <p style='line-height:130%'>
-      Again, after reading each article, you can decide to keep reading about this animal topic by moving to the next article, or go back to the main page to choose another animal topic. <b>Once you decide to leave a topic, you will not be able to return.</b>
+      <b>Again, after reading each article, you can choose to continue reading about the same animal topic by moving to the next article, or return to the main page to select another animal topic. Once you leave a topic, you will not be able to return to it.</b>
     </p>
     <p style='line-height:130%'>
-      You will be asked what you have learned at the end of the task. Please try your best to learn as much information about “animals” in 4 minutes.
+      At the end of the task, you will be asked to report what you have learned. Please try your best to learn as much information as you can about <i>animals</i> within 4 minutes.
     </p>
     <p style='line-height:130%'>
-      When you are ready, please go to the next page by pressing the “Start” button.
+      When you are ready, please click the <b>“Start”</b> button to go to the next page.
     </p>
     </div>
 
