--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -6,6 +6,14 @@
     <base target="_top">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/questions_style.css') }}">
+    <style>
+      body {
+        font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
+        font-size: 14pt;
+      }
+      td { font-size: 14pt; }
+      .question-text { font-size: 14pt; text-align: center; }
+    </style>
   </head>
   
   <body>
@@ -13,7 +21,7 @@
       <h2>Comprehension Questions</h2>
       <div class="cl2">
         <p>
-          The multiple-choice questions here are based on the passages you read in the formal task. Please do your best to answer each question carefully. If you are not sure, please select “I don't know the answer”. 
+          The multiple-choice questions here are based on the passages you read in the formal task. Please do your best to answer each question carefully. If you are not sure, please select “I don't know the answer”.
         </p>
         <br>
       </div>
