--- a/src/static/css/settings.css
+++ b/src/static/css/settings.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
-    font-size: 14px;
+    font-size: 14pt;
     margin: 20px;
 }
 
@@ -12,7 +12,7 @@ body {
 }
 
 .user-info {
-    font-size: 16px;
+    font-size: 14pt;
     color: #333;
     margin-bottom: 20px;
 }
