--- a/src/templates/done.html
+++ b/src/templates/done.html
@@ -26,7 +26,7 @@
     }
 
     p {
-      font-size: 18px;
+      font-size: 14pt;
       line-height: 1.6;
       color: #333;
       margin: 10px 0;
