--- a/src/templates/let_comp_two_inst.html
+++ b/src/templates/let_comp_two_inst.html
@@ -7,16 +7,19 @@
   <style>
     .cl2 { margin: 20px; padding: 20px; border: 1px solid #ccc; }
     .cl0 { margin: 20px; }
+    body {
+      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
+      font-size: 14pt;
+    }
+    td { font-size: 14pt; }
+    .question-text { font-size: 14pt; text-align: center; }
   </style>
 </head>
 <body>
   <div class="cl2">
     <h2><b>Instructions:</b></h2>
     <p style="line-height:130%">
-      And the same thing again, you will be asked to determine whether two letter strings are exactly the same or different.
-      If these two letter strings are exactly the <b>same</b>, please select <b>“S”</b>.
-      If they are <b>different</b>, please select <b>“D”</b>.
-      <b>Please do as fast as you can</b>. Once you finish the task, please press the <b>“DONE”</b> button. We will record the time you complete the task.
+      And the same thing again, you will be asked to determine whether two letter strings are exactly the same or different. If these two letter strings are exactly the same, please select “S”. If they are different, please select “D”. <b>Please do as fast as you can.</b> Once you finish the task, please press the <b>“DONE”</b> button. We will record the time you complete the task.
     </p>
     <p>
       Ready?
