--- a/src/templates/task_c1.html
+++ b/src/templates/task_c1.html
@@ -4,6 +4,14 @@
     <title>{{ page_title }}</title>
     <base target="_top">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <style>
+      body {
+        font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
+        font-size: 14pt;
+      }
+      td { font-size: 14pt; }
+      .question-text { font-size: 14pt; text-align: center; }
+    </style>
 </head>
 <body>
     <div class="b_up">
