--- a/src/templates/task_c2.html
+++ b/src/templates/task_c2.html
@@ -5,6 +5,14 @@
   <title>Task C2</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <style>
+    body {
+      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
+      font-size: 14pt;
+    }
+    td { font-size: 14pt; }
+    .question-text { font-size: 14pt; text-align: center; }
+  </style>
 </head>
 <body>
   <div class="b_up">
